--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -26,10 +26,13 @@
                 <tr class="tr-model">
                     <td class="td-model">
                         @*<a href="/CarModel/Details/@item.Id">
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </a>*@
-                        @Html.ActionLink(item.Name, "Details", new { id = TempPurchase.BrandId = item.Id })
-                    </td> 
+            @Html.DisplayFor(modelItem => item.Name)
+        </a>*@
+                    @{
+                        @Html.ActionLink(item.Name, "Details", new { id = item.Id });
+                        TempPurchase.BrandId = item.Id;
+                    }
+                    </td>
                     <td class="td-model">
                         
                         @*<a href="/CarModel/Details/@item.Id">*@
