--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -25,18 +25,10 @@
 
                 <tr class="tr-model">
                     <td class="td-model">
-                        @*<a href="/CarModel/Details/@item.Id">
-            @Html.DisplayFor(modelItem => item.Name)
-        </a>*@
-                    @{
-                        @Html.ActionLink(item.Name, "Details", new { id = item.Id });
-                        TempPurchase.BrandId = item.Id;
-                    }
+                        @Html.ActionLink(item.Name, "Details", new { id = item.Id})
+                    
                     </td>
                     <td class="td-model">
-                        
-                        @*<a href="/CarModel/Details/@item.Id">*@
-                        @*<a href="/CarModel/Details/@item.Id">*@
                             @if (item.Id == 1)
                             {
                                 <img class="small-icon" src="~/App_Images/megane-small-icon.jpg" alt="Megane-small-icon" />
@@ -45,14 +37,7 @@
                             {
                                 <img class="small-icon" src="~/App_Images/duster-small-icon.jpg" alt="Megane-small-icon" />
                             }
-                        @*</a>*@
                     </td>
-                    @*<td class="td-model">
-                        <a href="/CarColor/Index">Color</a>
-                    </td>
-                    <td class="td-model">
-                        <a href="/Config/Index/@item.Id">Configuration</a>
-                    </td>*@
                 </tr>
             }
 
