--- a/CarStore/Views/Purchase/Index.cshtml
+++ b/CarStore/Views/Purchase/Index.cshtml
@@ -33,38 +33,44 @@
         <th>
             @Html.DisplayNameFor(model => model.CarColorId)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BrandId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CarModelId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ConfigId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CarColorId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Customer)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Phone)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Date)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.BrandId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CarModelId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.ConfigId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CarColorId)
+    </td>
+    <td>
+        $@Html.DisplayFor(modelItem => item.Price)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+</tr>
 }
 
 </table>
