--- a/CarStore/Views/Purchase/Details.cshtml
+++ b/CarStore/Views/Purchase/Details.cshtml
@@ -54,12 +54,21 @@
                     </dd>
                     <hr />
                     <dt>
+                        @Html.DisplayNameFor(model => model.CarTypeId):
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.CarTypeId)
+                    </dd>
+                    <hr />
+                    <dt>
                         @Html.DisplayNameFor(model => model.CarModelId):
                     </dt>
 
                     <dd>
                         @Html.DisplayFor(model => model.CarModelId)
                     </dd>
+
                     <hr />
                     <dt>
                         @Html.DisplayNameFor(model => model.ConfigId):
