Attempt to add id saver

--- a/CarStore/Views/CarType/Index.cshtml
+++ b/CarStore/Views/CarType/Index.cshtml
@@ -16,9 +16,6 @@
 
     <body>
 
-
-        <h2>Index</h2>
-
         <table class="table-model">
             
 
@@ -30,7 +27,7 @@
                     </td>
 
                     <td class="td-model">
-                        <a href="/PurchaseBuild/CarTypeChoose/@item.Id">View cars</a>
+                        <a href="/IdSaver/CarTypeChoose/@item.Id">View cars</a>
                     </td>
                 </tr>
             }
