Added car types.

--- a/CarStore/Views/Brand/Index.cshtml
+++ b/CarStore/Views/Brand/Index.cshtml
@@ -38,7 +38,7 @@
                     <a href="/Brand/Details/@item.Id">Details</a>
                 </td>
                     <td class="td-brand">
-                        <a href="/IdSaver/BrandChoose/@item.Id">View cars</a>
+                        <a href="/PurchaseBuild/BrandChoose/@item.Id">View cars</a>
                     </td>
 
             </tr>
