--- a/CarStore/Views/Config/Index.cshtml
+++ b/CarStore/Views/Config/Index.cshtml
@@ -65,7 +65,7 @@
             $@Html.DisplayFor(modelItem => item.Price)
         </td>
         <td class="td-cc">
-            <a href="/IdSaver/ConfigChoose/@item.Id">Choose</a>
+            <a href="/PurchaseBuild/ConfigChoose/@item.Id">Choose</a>
         </td>
     </tr>
         }
