--- a/CarStore/Views/Purchase/Index.cshtml
+++ b/CarStore/Views/Purchase/Index.cshtml
@@ -25,6 +25,9 @@
             @Html.DisplayNameFor(model => model.BrandId)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.CarTypeId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.CarModelId)
         </th>
         <th>
@@ -52,6 +55,9 @@
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.BrandId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CarTypeId)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.CarModelId)
